--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
         "laravel/breeze": "^2.1",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "league/html-to-markdown": "^5.1",
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.0",
         "predis/predis": "^2.2",
+        "symfony/dom-crawler": "^7.1",
         "theodo-group/llphant": "^0.6.18"
     },
     "require-dev": {
